<resources>
    <string name="app_name">Recipe Book</string>
    <string name="noti_msg_1">Adebayo Apercu sent you a message</string>
    <!-- strings.xml -->
    <string name="placeholder">What recipe are you looking for?</string>
    <string name="placeholder_hint">What Ingredients are you looking for?</string>
    <string name="sender">Adebayo Apercu</string>
    <string name="message">A selection of chicken dishes served together ...</string>
    <string name="text_peppers"><![CDATA[Sausage & \n Peppers Group]]></string>
    <string name="welcome_to">Welcome To</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login_with">Login With</string>
    <string name="or">or</string>
    <string name="welcome_david">Welcome David</string>
    <string name="recipes">Recipes</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="favourites">Favourites</string>
    <string name="upload">Upload</string>
    <string name="notifications">Notifications</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="text">Combining data, design, and machine learning to build \n intelligent products and services that improve people\'s lives.</string>
    <string name="search_by_recipe">Search by Recipe</string>
    <string name="my_search_history">My Search History</string>
    <string name="my_favorites_recipes">My Favorites Recipes</string>
    <string name="easy_mexican_casserole">Easy Mexican Casserole</string>
    <string name="thai_chicken_balls">Thai Chicken Balls</string>
    <string name="honey_mustard_pork_chops">Honey Mustard Pork Chops</string>
    <string name="salsa_chicken_rice_casserole">Salsa Chicken Rice Casserole</string>
    <string name="banana_cinnamon_roll_casserole">Banana Cinnamon Roll Casserole</string>
    <string name="explore_more_recipes">Explore more recipes</string>
    <string name="a_selection_of_chicken_dishes_served_together_on_n_a_white_table_this_is_comfort_food_heaven">A selection of chicken dishes served together on \n a white table. This is comfort food heaven.</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>