<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".home.HomeActivity">

        <TextView
            android:id="@+id/welcome"
            style="@style/welcome_dav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_david"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_recipe_logo"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/recipes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintStart_toStartOf="@+id/card"
                app:layout_constraintEnd_toStartOf="@id/chats_btn"
                app:layout_constraintTop_toTopOf="@id/card">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/ic_vector_recipes" />

                <TextView
                    style="@style/recipes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginRight="29dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/recipes" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/chats_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintStart_toEndOf="@id/recipes_btn"
                app:layout_constraintEnd_toStartOf="@id/networks_btn"
                app:layout_constraintTop_toTopOf="@id/card">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/ic_vectors_chats" />

                <TextView
                    style="@style/chats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/chats" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/networks_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintStart_toEndOf="@id/chats_btn"
                app:layout_constraintEnd_toEndOf="@id/card"
                app:layout_constraintTop_toTopOf="@id/card">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="33dp"
                    android:layout_marginBottom="36dp"
                    android:background="@drawable/ic_vectors_networks" />

                <TextView
                    style="@style/chats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="Networks " />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/friends_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintLeft_toLeftOf="@id/card"
                app:layout_constraintRight_toLeftOf="@+id/fav_btn"
                app:layout_constraintTop_toBottomOf="@id/recipes_btn">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="31dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/ic_vector_friends" />

                <TextView
                    style="@style/friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/friends" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/fav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintLeft_toRightOf="@id/friends_btn"
                app:layout_constraintRight_toLeftOf="@id/upload_btn"
                app:layout_constraintTop_toBottomOf="@id/chats_btn">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="31dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="37dp"
                    android:background="@drawable/ic_vector_fav" />

                <TextView
                    style="@style/favourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/favourites" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/upload_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="16dp"
                app:layout_constraintStart_toEndOf="@id/fav_btn"
                app:layout_constraintEnd_toEndOf="@id/card"
                app:layout_constraintTop_toBottomOf="@id/networks_btn">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="27dp"
                    android:layout_marginBottom="37dp"
                    android:background="@drawable/ic_vector_upload" />

                <TextView
                    style="@style/uploads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="63dp"
                    android:layout_marginEnd="29dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/upload" />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="40dp"
                android:background="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/fav_btn" />

            <TextView
                android:id="@+id/notification"
                style="@style/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/notifications" />


            <TextView
                android:id="@+id/clear_notifications"
                style="@style/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="28dp"
                android:text="@string/clear_notifications" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notification_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification"
                app:layout_constraintStart_toStartOf='parent'
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
