<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeOne">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recipe_bg"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipe_pg_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="@id/recipe_pg_1">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_swipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--            <ImageView-->
            <!--                android:id="@+id/ellispe_1"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/search_btn"-->
            <!--                android:layout_alignBottom="@id/search_btn"-->
            <!--                android:layout_alignParentRight="true"-->
            <!--                android:layout_marginTop="7dp"-->
            <!--                android:layout_marginRight="18dp"-->
            <!--                android:background="@drawable/ellispe_1"-->
            <!--                app:layout_constraintRight_toRightOf="@id/ellispe_2"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/search_btn" />-->

            <!--            <ImageView-->
            <!--                android:id="@+id/ellispe_2"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:background="@drawable/ellispe_2"-->
            <!--                app:layout_constraintRight_toRightOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/search_btn" />-->

        </RelativeLayout>


        <TextView
            android:id="@+id/search_by_r"
            style="@style/search_by_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:lineSpacingExtra="13sp"
            android:text="@string/search_by_recipe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_bar" />


        <EditText
            android:id="@+id/search_edit_text"
            style="@style/placeholder"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/recipe_search"
            android:hint="@string/placeholder"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHint="#8894A2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_by_r" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintTop_toTopOf="@id/search_edit_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="208dp"
            android:background="@drawable/card_recipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text">

            <TextView
                android:id="@+id/search_history_text"
                style="@style/placeholder"
                android:layout_width="126dp"
                android:layout_height="33dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="23dp"
                android:text="@string/my_search_history"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_history_text" />

            <TextView
                android:id="@+id/fav_recipe_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/my_favorites_recipes"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_1" />

            <View
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fav_recipe_text" />

            <TextView
                android:id="@+id/easy_mexican_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/easy_mexican_casserole"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_2" />

            <View
                android:id="@+id/line_3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/easy_mexican_text" />


            <TextView
                android:id="@+id/thai_balls_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/thai_chicken_balls"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_3" />

            <View
                android:id="@+id/line_4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thai_balls_text" />


            <TextView
                android:id="@+id/pork_chops_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/honey_mustard_pork_chops"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_4" />

            <View
                android:id="@+id/line_5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pork_chops_text" />


            <TextView
                android:id="@+id/salsa_rice_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/salsa_chicken_rice_casserole"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_5" />

            <View
                android:id="@+id/line_6"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salsa_rice_text" />


            <TextView
                android:id="@+id/roll_text"
                style="@style/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/banana_cinnamon_roll_casserole"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/ic_search_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line_6" />

            <View
                android:id="@+id/line_7"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="#8894A2"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roll_text" />


            <TextView
                android:id="@+id/explore_text"
                style="@style/explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="109dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="106dp"
                android:text="@string/explore_more_recipes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_7" />

            <View
                android:id="@+id/underline"
                android:layout_width="145dp"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="#34A853"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explore_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>